Adiciona macro HOMING_E_REFERENCIAS para capturar referências T0, T1, T2

--- a/printer.cfg
+++ b/printer.cfg
@@ -330,7 +330,7 @@ sensor_pin: ^PC0             # Signal pin
 control_pin: PE6             # Servo control
 x_offset: 40
 y_offset: -50
-z_offset: 0.0                # Valor será sobrescrito pelo SAVE_CONFIG
+#z_offset: 0.0                # Valor será sobrescrito pelo SAVE_CONFIG
 speed: 5.0
 sample_retract_dist: 10.0
 stow_on_each_sample: True    # Força retração após cada medição
@@ -798,6 +798,7 @@ gcode:
 [include sensor_piezo_probe_lento.cfg]     # Configuração para probe automático lento
 [include TESTE_OFFSET_PIEZO_BLTOUCH.cfg]    # Teste de offset entre piezo e BLTouch
 [include CONFIGURACAO_PIEZO_COMPLETA.cfg]   # Configuração completa do sensor piezoelétrico
+[include macro_homing_referencias.cfg]      # Macro para homing e captura de referências T0, T1, T2
 [include CONFIGURACAO_DUAL_PROBE_SISTEMA.cfg]  # Sistema dual probe piezo + BLTouch
 [include calibracao_tp223_automatica.cfg]    # Sistema de calibração automática com sensor TP223
 [include calibracao_multitools_tp223.cfg]   # Sistema de calibração multi-ferramentas TP223
@@ -808,3 +809,8 @@ gcode:
 [include klipperscreen_menu_calibracao.cfg]        # Menu personalizado para KlipperScreen (opcional)
 [include MACRO_DIAGNOSTICO_BLTOUCH.cfg]
 
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bltouch]
+#*# z_offset = 0.700
